--- a/components/nav/PageHeader.module.css
+++ b/components/nav/PageHeader.module.css
@@ -37,5 +37,6 @@
   .header {
     padding-left: 24px;
     padding-right: 24px;
+    margin-bottom: 24px;
   }
 }
